--- a/database.ini
+++ b/database.ini
@@ -1,5 +1,5 @@
 [postgresql]
-host= localhost
-user= postgres
-password= "210199"  # Ваш пароль
-port= 5432
+host=localhost
+user=postgres
+password=210199
+port=5432
